Added styles.css, fonts

--- a/index.html
+++ b/index.html
@@ -4,14 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My resume</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Poppins:wght@300;400;600;900&family=Rubik:wght@300&display=swap"
+        rel="stylesheet">
+
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
 
     <!-- Wrapper -->
-    <div>
+    <div class="wrapper">
 
         <!-- Main content -->
-        <div>
+        <div class="main-content">
 
             <!-- My info -->
             <div>
@@ -84,7 +92,7 @@
             <!-- Education -->
             <div>
                 <h3>Education</h3>
-                <h4>State University of Trade and Economics</h4>
+                <p>State University of Trade and Economics</p>
                 <p>Cybersecurity</p>
                 <p>September 2021 - June 2025 | Ukraine</p>
             </div>
