--- a/index.html
+++ b/index.html
@@ -99,39 +99,41 @@
         </div>
 
         <!-- Sidebar -->
-        <aside>
+        <aside class="sidebar">
             <img src="./img/me.jpg" alt="My photo" width="370">
 
-            <!-- Contacts -->
-            <div>
-                <h3>Contacts</h3>
-                <p>C: <a href="tel:+380964073686">+380 96 407 36 86</a></p>
-                <p>E: <a href="mailto:vsh_o@ukr.net">vsh_o@ukr.net</a></p>
-            </div>
+            <div class="sidebar-content">
+                <!-- Contacts -->
+                <div class="contacts-container">
+                    <h3 class="contacts-title">Contacts</h3>
+                    <p class="contacts-item"><span class="contacts-type">C:</span> <a class="contacts-link" href="tel:+380964073686">+380 96 407 36 86</a></p>
+                    <p class="contacts-item"><span class="contacts-type">E:</span> <a class="contacts-link" href="mailto:vsh_o@ukr.net">vsh_o@ukr.net</a></p>
+                </div>
 
-            <!-- Tech skills -->
-            <div>
-                <h3>Tech Skills</h3>
-                <ul>
-                    <li>HTML5</li>
-                    <li>CSS3</li>
-                    <li>GIT</li>
-                    <li>WebPack</li>
-                    <li>JavaScript</li>
-                    <li>React.js</li>
-                    <li>Node.js</li>
-                </ul>
-            </div>
+                <!-- Tech skills -->
+                <div class="skills-container">
+                    <h3 class="skills-title">Tech Skills</h3>
+                    <ul class="skills-list">
+                        <li class="skills-list-item">HTML5</li>
+                        <li class="skills-list-item">CSS3</li>
+                        <li class="skills-list-item">GIT</li>
+                        <li class="skills-list-item">WebPack</li>
+                        <li class="skills-list-item">JavaScript</li>
+                        <li class="skills-list-item">React.js</li>
+                        <li class="skills-list-item">Node.js</li>
+                    </ul>
+                </div>
 
-            <!-- Soft skills -->
-            <div>
-                <h3>Soft Skills</h3>
-                <ul>
-                    <li>Scrum</li>
-                    <li>Agile</li>
-                    <li>GTD</li>
-                    <li>Teamwork</li>
-                </ul>
+                <!-- Soft skills -->
+                <div class="skills-container">
+                    <h3 class="skills-title">Soft Skills</h3>
+                    <ul class="skills-list">
+                        <li class="skills-list-item">Scrum</li>
+                        <li class="skills-list-item">Agile</li>
+                        <li class="skills-list-item">GTD</li>
+                        <li class="skills-list-item">Teamwork</li>
+                    </ul>
+                </div>
             </div>
         </aside>
     </div>
