--- a/index.html
+++ b/index.html
@@ -1,141 +1,202 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My resume</title>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Poppins:wght@300;400;600;900&family=Rubik:wght@300&display=swap"
-        rel="stylesheet">
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Poppins:wght@300;400;600;900&family=Rubik:wght@300&display=swap"
+      rel="stylesheet"
+    />
 
-    <link rel="stylesheet" href="./css/styles.css">
-</head>
-<body>
-
+    <link rel="stylesheet" href="./css/styles.css" />
+  </head>
+  <body>
     <!-- Wrapper -->
     <div class="wrapper">
-
-        <!-- Main content -->
-        <div class="main-content">
-
-            <!-- My info -->
-            <div>
-                <h2>Front-End Developer</h2>
-                <h1>Vlada Glushchenko</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-                aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
-            </div>
-
-            <!-- My projects -->
-            <div>
-                <h3>Projects</h3>
-                <ol>
-                    <li>
-                        <a href="https://hellen.p.goit.global/" target="_blank">https://hellen.p.goit.global/</a>
-                        ...............
-                        [ HTML5, CSS3 ]
-                    </li>
-                    <li>
-                        <a href="https://cryptohub.p.goit.global/" target="_blank">https://cryptohub.p.goit.global/</a>
-                        .........
-                        [ JavaScript ]
-                    </li>
-                    <li>
-                        <a href="https://kidslike.p.goit.global/" target="_blank">https://kidslike.p.goit.global/</a>
-                        ............
-                        [ React.js, Node.js ]
-                    </li>         
-                </ol>
-            </div>
-
-            <!-- Work experience -->
-            <div>
-                <h3>Work Experience</h3>
-
-                <!-- Company 1 -->
-                <div>
-                    <h4>Customer Support Manager</h4>
-                    <p>June 2021 - up to now | Ukraine</p>
-                    <ul>
-                        <li>Technical assistance to customers.</li>
-                        <li>Consulting clients on the company's services.</li>
-                        <li>Maintaining reports, working documents, and registers.</li>        
-                    </ul>
-                </div>
-
-                <!-- Company 2 -->
-                <div>
-                    <h4>Manager Banderogusak & Co.</h4>
-                    <p>March 2015 - October 2018 | Country</p>
-                    <ul>
-                        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod labore et dolore magna aliqua.</li>
-                        <li>Quis ipsum suspendisse ultrices gravida.</li>
-                        <li>Risus commodo viverra maecenas.</li>
-                    </ul>
-                </div>
-
-                <!-- Company 3 -->
-                <div>
-                    <h4>Manager BestUA Corp.</h4>
-                    <p>June 2014 - February 2015 | Country</p>
-                    <ul>
-                        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-                        <li>Quis ipsum suspendisse ultrices gravida.</li>
-                        <li>Risus commodo viverra maecenas.</li>
-                    </ul>
-                </div>
-            </div>
-
-            <!-- Education -->
-            <div>
-                <h3>Education</h3>
-                <p>State University of Trade and Economics</p>
-                <p>Cybersecurity</p>
-                <p>September 2021 - June 2025 | Ukraine</p>
-            </div>
+      <!-- Main content -->
+      <div class="main-content">
+        <!-- My info -->
+        <div class="my-info">
+          <h2 class="my-profession">Front-End Developer</h2>
+          <h1 class="my-name">Vlada Glushchenko</h1>
+          <p class="my-descr">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis
+            ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas
+            accumsan lacus vel facilisis.
+          </p>
         </div>
 
-        <!-- Sidebar -->
-        <aside class="sidebar">
-            <img src="./img/me.jpg" alt="My photo" width="370">
+        <!-- My projects -->
+        <div class="my-projects-container">
+          <h3 class="my-projects-title">Projects</h3>
+          <ol class="my-projects-list">
+            <li class="my-projects-item">
+              <a
+                class="my-projects-item-link"
+                href="https://hellen.p.goit.global/"
+                target="_blank"
+                >https://hellen.p.goit.global/</a
+              >
+              <span class="my-projects-item-tech"
+                >............... [ HTML5, CSS3 ]</span
+              >
+            </li>
+            <li class="my-projects-item">
+              <a
+                class="my-projects-item-link"
+                href="https://cryptohub.p.goit.global/"
+                target="_blank"
+                >https://cryptohub.p.goit.global/</a
+              >
+              <span class="my-projects-item-tech"
+                >......... [ JavaScript ]</span
+              >
+            </li>
+            <li class="my-projects-item">
+              <a
+                class="my-projects-item-link"
+                href="https://kidslike.p.goit.global/"
+                target="_blank"
+                >https://kidslike.p.goit.global/</a
+              >
+              <span class="my-projects-item-tech"
+                >............ [ React.js, Node.js ]</span
+              >
+            </li>
+          </ol>
+        </div>
 
-            <div class="sidebar-content">
-                <!-- Contacts -->
-                <div class="contacts-container">
-                    <h3 class="contacts-title">Contacts</h3>
-                    <p class="contacts-item"><span class="contacts-type">C:</span> <a class="contacts-link" href="tel:+380964073686">+380 96 407 36 86</a></p>
-                    <p class="contacts-item"><span class="contacts-type">E:</span> <a class="contacts-link" href="mailto:vsh_o@ukr.net">vsh_o@ukr.net</a></p>
-                </div>
+        <!-- Work experience -->
+        <div class="work-container">
+          <h3 class="work-title">Work Experience</h3>
 
-                <!-- Tech skills -->
-                <div class="skills-container">
-                    <h3 class="skills-title">Tech Skills</h3>
-                    <ul class="skills-list">
-                        <li class="skills-list-item">HTML5</li>
-                        <li class="skills-list-item">CSS3</li>
-                        <li class="skills-list-item">GIT</li>
-                        <li class="skills-list-item">WebPack</li>
-                        <li class="skills-list-item">JavaScript</li>
-                        <li class="skills-list-item">React.js</li>
-                        <li class="skills-list-item">Node.js</li>
-                    </ul>
-                </div>
+          <!-- Company 1 -->
+          <div class="work-company-container">
+            <h4 class="work-company-title">
+              Customer Support Manager
+              <span class="work-company-name">Simply Contact</span>
+            </h4>
+            <p class="work-period">
+              June 2021 - up to now
+              <span class="work-period-sep">|</span> Ukraine
+            </p>
+            <ul class="work-duties-list">
+              <li class="work-duties-item">
+                Technical assistance to customers.
+              </li>
+              <li class="work-duties-item">
+                Consulting clients on the company's services.
+              </li>
+              <li class="work-duties-item">
+                Maintaining reports, working documents, and registers.
+              </li>
+            </ul>
+          </div>
 
-                <!-- Soft skills -->
-                <div class="skills-container">
-                    <h3 class="skills-title">Soft Skills</h3>
-                    <ul class="skills-list">
-                        <li class="skills-list-item">Scrum</li>
-                        <li class="skills-list-item">Agile</li>
-                        <li class="skills-list-item">GTD</li>
-                        <li class="skills-list-item">Teamwork</li>
-                    </ul>
-                </div>
-            </div>
-        </aside>
+          <!-- Company 2 -->
+          <div class="work-company-container">
+            <h4 class="work-company-title">
+              Manager <span class="work-company-name">Banderogusak & Co.</span>
+            </h4>
+            <p class="work-period">
+              March 2015 - October 2018
+              <span class="work-period-sep">|</span> Country
+            </p>
+            <ul class="work-duties-list">
+              <li class="work-duties-item">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod labore et dolore magna aliqua.
+              </li>
+              <li class="work-duties-item">
+                Quis ipsum suspendisse ultrices gravida.
+              </li>
+              <li class="work-duties-item">Risus commodo viverra maecenas.</li>
+            </ul>
+          </div>
+
+          <!-- Company 3 -->
+          <div class="work-company-container">
+            <h4 class="work-company-title">
+              Manager <span class="work-company-name">BestUA Corp.</span>
+            </h4>
+            <p class="work-period">
+              June 2014 - February 2015
+              <span class="work-period-sep">|</span> Country
+            </p>
+            <ul class="work-duties-list">
+              <li class="work-duties-item">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              </li>
+              <li class="work-duties-item">
+                Quis ipsum suspendisse ultrices gravida.
+              </li>
+              <li class="work-duties-item">Risus commodo viverra maecenas.</li>
+            </ul>
+          </div>
+        </div>
+
+        <!-- Education -->
+        <div class="education-container">
+          <h3 class="education-title">Education</h3>
+          <p class="education-name">State University of Trade and Economics</p>
+          <p class="education-profession">Cybersecurity</p>
+          <p class="education-duration">September 2021 - June 2025 | Ukraine</p>
+        </div>
+      </div>
+
+      <!-- Sidebar -->
+      <aside class="sidebar">
+        <img src="./img/me.jpg" alt="My photo" width="370" />
+
+        <div class="sidebar-content">
+          <!-- Contacts -->
+          <div class="contacts-container">
+            <h3 class="contacts-title">Contacts</h3>
+            <p class="contacts-item">
+              <span class="contacts-type">C:</span>
+              <a class="contacts-link" href="tel:+380964073686"
+                >+380 96 407 36 86</a
+              >
+            </p>
+            <p class="contacts-item">
+              <span class="contacts-type">E:</span>
+              <a class="contacts-link" href="mailto:vsh_o@ukr.net"
+                >vsh_o@ukr.net</a
+              >
+            </p>
+          </div>
+
+          <!-- Tech skills -->
+          <div class="skills-container">
+            <h3 class="skills-title">Tech Skills</h3>
+            <ul class="skills-list">
+              <li class="skills-list-item">HTML5</li>
+              <li class="skills-list-item">CSS3</li>
+              <li class="skills-list-item">GIT</li>
+              <li class="skills-list-item">WebPack</li>
+              <li class="skills-list-item">JavaScript</li>
+              <li class="skills-list-item">React.js</li>
+              <li class="skills-list-item">Node.js</li>
+            </ul>
+          </div>
+
+          <!-- Soft skills -->
+          <div class="skills-container">
+            <h3 class="skills-title">Soft Skills</h3>
+            <ul class="skills-list">
+              <li class="skills-list-item">Scrum</li>
+              <li class="skills-list-item">Agile</li>
+              <li class="skills-list-item">GTD</li>
+              <li class="skills-list-item">Teamwork</li>
+            </ul>
+          </div>
+        </div>
+      </aside>
     </div>
-</body>
+  </body>
 </html>
