--- a/index.html
+++ b/index.html
@@ -24,10 +24,9 @@
           <h2 class="my-profession">Front-End Developer</h2>
           <h1 class="my-name">Vlada Glushchenko</h1>
           <p class="my-descr">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis
-            ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas
-            accumsan lacus vel facilisis.
+            I am in my 3rd year of university, where I am studying cybersecurity. My education allows me to understand the
+            importance of securing web applications and developing defense strategies, which adds value to my work as a front-end
+            developer.
           </p>
         </div>
 
@@ -46,28 +45,6 @@
                 >............... [ HTML5, CSS3 ]</span
               >
             </li>
-            <li class="my-projects-item">
-              <a
-                class="my-projects-item-link"
-                href="https://cryptohub.p.goit.global/"
-                target="_blank"
-                >https://cryptohub.p.goit.global/</a
-              >
-              <span class="my-projects-item-tech"
-                >......... [ JavaScript ]</span
-              >
-            </li>
-            <li class="my-projects-item">
-              <a
-                class="my-projects-item-link"
-                href="https://kidslike.p.goit.global/"
-                target="_blank"
-                >https://kidslike.p.goit.global/</a
-              >
-              <span class="my-projects-item-tech"
-                >............ [ React.js, Node.js ]</span
-              >
-            </li>
           </ol>
         </div>
 
@@ -76,6 +53,26 @@
           <h3 class="work-title">Work Experience</h3>
 
           <!-- Company 1 -->
+          <div class="work-company-container">
+            <h4 class="work-company-title">
+              Front-End Developer <span class="work-company-name">Freelance</span>
+            </h4>
+            <p class="work-period">
+              November 2023 - up to now
+              <span class="work-period-sep">|</span> Ukraine
+            </p>
+            <ul class="work-duties-list">
+              <li class="work-duties-item">
+                Creating interactive and responsive websites.
+              </li>
+              <li class="work-duties-item">
+                Optimize and improve the user experience.
+              </li>
+              <li class="work-duties-item">Interaction with APIs and integration of third-party services.</li>
+            </ul>
+          </div>
+
+          <!-- Company 2 -->
           <div class="work-company-container">
             <h4 class="work-company-title">
               Customer Support Manager
@@ -95,47 +92,6 @@
               <li class="work-duties-item">
                 Maintaining reports, working documents, and registers.
               </li>
-            </ul>
-          </div>
-
-          <!-- Company 2 -->
-          <div class="work-company-container">
-            <h4 class="work-company-title">
-              Manager <span class="work-company-name">Banderogusak & Co.</span>
-            </h4>
-            <p class="work-period">
-              March 2015 - October 2018
-              <span class="work-period-sep">|</span> Country
-            </p>
-            <ul class="work-duties-list">
-              <li class="work-duties-item">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod labore et dolore magna aliqua.
-              </li>
-              <li class="work-duties-item">
-                Quis ipsum suspendisse ultrices gravida.
-              </li>
-              <li class="work-duties-item">Risus commodo viverra maecenas.</li>
-            </ul>
-          </div>
-
-          <!-- Company 3 -->
-          <div class="work-company-container">
-            <h4 class="work-company-title">
-              Manager <span class="work-company-name">BestUA Corp.</span>
-            </h4>
-            <p class="work-period">
-              June 2014 - February 2015
-              <span class="work-period-sep">|</span> Country
-            </p>
-            <ul class="work-duties-list">
-              <li class="work-duties-item">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-              </li>
-              <li class="work-duties-item">
-                Quis ipsum suspendisse ultrices gravida.
-              </li>
-              <li class="work-duties-item">Risus commodo viverra maecenas.</li>
             </ul>
           </div>
         </div>
@@ -178,7 +134,6 @@
               <li class="skills-list-item">HTML5</li>
               <li class="skills-list-item">CSS3</li>
               <li class="skills-list-item">GIT</li>
-              <li class="skills-list-item">WebPack</li>
               <li class="skills-list-item">JavaScript</li>
               <li class="skills-list-item">React.js</li>
               <li class="skills-list-item">Node.js</li>
