--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My resume</title>
+    <title>About Vlada</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -37,9 +37,9 @@
             <li class="my-projects-item">
               <a
                 class="my-projects-item-link"
-                href="https://hellen.p.goit.global/"
+                href="https://vladagl-tech.netlify.app"
                 target="_blank"
-                >https://hellen.p.goit.global/</a
+                >https://vladagl-tech.netlify.app</a
               >
               <span class="my-projects-item-tech"
                 >............... [ HTML5, CSS3 ]</span
